add IT RoomStatusService and RoomTypeService
