# swagger.yml
@@ -1,295 +1,234 @@
 swagger: "2.0"
 info:
-  description: "This is a sample server Petstore server.  You can find out more about     Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).      For this sample, you can use the api key `special-key` to test the authorization     filters."
   version: "1.0.0"
   title: "Swagger Petstore"
-  termsOfService: "http://swagger.io/terms/"
-  contact:
-    email: "apiteam@swagger.io"
-  license:
-    name: "Apache 2.0"
-    url: "http://www.apache.org/licenses/LICENSE-2.0.html"
-host: "petstore.swagger.io"
-basePath: "/v2"
 tags:
 - name: "booking"
-  description: "Access to Petstore orders"
+  description: "Making bookings"
 - name: "checkIn"
-  description: "Access to Petstore orders"
+  description: "Settlement"
 - name: "checkOut"
-  description: "Access to Petstore orders"
+  description: "Eviction"
 - name: "statistic"
-  description: "Access to Petstore orders"
+  description: "Statistic"
 paths:
   /booking:
     get:
       tags:
       - "booking"
-      summary: "Find pet by ID"
-      description: "Returns a single pet"
       operationId: "getBooking"
       produces:
-      - "application/xml"
       - "application/json"
-      parameters:
-      - name: "petId"
-        in: "path"
-        description: "ID of pet to return"
-        required: true
-        type: "integer"
-        format: "int64"
       responses:
         200:
           description: "successful operation"
           schema:
-            $ref: '#/definitions/Booking'
-      security:
-      - api_key: []
+            $ref: '#/definitions/Reception'
     put:
       tags:
       - "booking"
-      summary: "Find pet by ID"
-      description: "Returns a single pet"
+      description: "put book"
       operationId: "putBooking"
       produces:
       - "application/json"
-      reqestBody:
+      parameters:
+      - in: "body"
+        name: "body"
         required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/definitions/Booking'
+        schema:
+          $ref: "#/definitions/Booking"
       responses:
         200:
           description: "successful operation"
-          schema:
-            $ref: "#/definitions/Pet"
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Pet not found"
-      security:
-      - api_key: []
   /booking/{idBooking}:
     put:
       tags:
       - "booking"
-      summary: "Updates a pet in the store with form data"
-      description: ""
+      description: "update book"
       operationId: "updateBooking"
-      consumes:
-      - "application/x-www-form-urlencoded"
       produces:
-      - "application/xml"
       - "application/json"
       parameters:
-      - name: "petId"
+      - name: "idBooking"
         in: "path"
-        description: "ID of pet that needs to be updated"
+        description: "book id"
         required: true
         type: "integer"
-        format: "int64"
-      - name: "name"
-        in: "formData"
-        description: "Updated name of the pet"
-        required: false
-        type: "string"
-      - name: "status"
-        in: "formData"
-        description: "Updated status of the pet"
-        required: false
-        type: "string"
+      - in: "body"
+        name: "body"
+        required: true
+        schema:
+          $ref: "#/definitions/Booking"
       responses:
-        405:
-          description: "Invalid input"
-      security:
-      - petstore_auth:
-        - "write:pets"
-        - "read:pets"
+        200:
+          description: "successful operation"
     delete:
       tags:
       - "booking"
-      summary: "Deletes a pet"
-      description: ""
+      description: "delete book"
       operationId: "deleteBooking"
       produces:
-      - "application/xml"
       - "application/json"
       parameters:
-      - name: "api_key"
-        in: "header"
-        required: false
-        type: "string"
-      - name: "petId"
+      - name: "idBooking"
         in: "path"
-        description: "Pet id to delete"
+        description: "book id"
         required: true
         type: "integer"
-        format: "int64"
       responses:
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Pet not found"
-      security:
-      - petstore_auth:
-        - "write:pets"
-        - "read:pets"
+        200:
+          description: "successful operation"
   /checkIn:
     get:
       tags:
       - "checkIn"
-      summary: "Find pet by ID"
-      description: "Returns a single pet"
       operationId: "getCheckIn"
       produces:
-      - "application/xml"
       - "application/json"
-      parameters:
-      - name: "petId"
-        in: "path"
-        description: "ID of pet to return"
-        required: true
-        type: "integer"
-        format: "int64"
       responses:
         200:
           description: "successful operation"
           schema:
-            $ref: "#/definitions/Pet"
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Pet not found"
-      security:
-      - api_key: []
+            $ref: '#/definitions/Reception'
     put:
       tags:
       - "checkIn"
-      summary: "Find pet by ID"
-      description: "Returns a single pet"
+      description: "put checkIn"
       operationId: "putCheckIn"
       produces:
-      - "application/xml"
       - "application/json"
       parameters:
-      - name: "petId"
-        in: "path"
-        description: "ID of pet to return"
+      - in: "body"
+        name: "body"
         required: true
-        type: "integer"
-        format: "int64"
+        schema:
+          $ref: "#/definitions/Booking"
       responses:
         200:
           description: "successful operation"
-          schema:
-            $ref: "#/definitions/Pet"
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Pet not found"
-      security:
-      - api_key: []
   /checkIn/{idCheckIn}:
     put:
       tags:
       - "checkIn"
-      summary: "Find pet by ID"
-      description: "Returns a single pet"
+      description: "update checkIn"
       operationId: "updateCheckIn"
       produces:
-      - "application/xml"
       - "application/json"
       parameters:
-      - name: "petId"
+      - name: "idCheckIn"
         in: "path"
-        description: "ID of pet to return"
+        description: "checkIn id"
         required: true
         type: "integer"
-        format: "int64"
+      - in: "body"
+        name: "body"
+        required: true
+        schema:
+          $ref: "#/definitions/Booking"
       responses:
         200:
           description: "successful operation"
-          schema:
-            $ref: "#/definitions/Pet"
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Pet not found"
-      security:
-      - api_key: []
   /checkOut:
-    put:
+    get:
       tags:
       - "checkOut"
-      summary: "Find pet by ID"
-      description: "Returns a single pet"
+      description: "put checkOut"
       operationId: "putCheckOut"
       produces:
-      - "application/xml"
       - "application/json"
       parameters:
-      - name: "petId"
-        in: "path"
-        description: "ID of pet to return"
+      - in: "body"
+        name: "body"
         required: true
-        type: "integer"
-        format: "int64"
+        schema:
+          $ref: "#/definitions/CheckOut"
       responses:
         200:
           description: "successful operation"
-          schema:
-            $ref: "#/definitions/Pet"
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Pet not found"
-      security:
-      - api_key: []
   /statistic/getRooms?dateFrom={dateFrom}&dateTo={dateTo}&type={type}}:
     get:
       tags:
       - "statistic"
-      summary: "Find pet by ID"
-      description: "Returns a single pet"
-      operationId: "getStatistic"
+      description: "statistic"
+      operationId: "statistic"
       produces:
-      - "application/xml"
       - "application/json"
       parameters:
-      - name: "petId"
+      - name: "dateFrom"
         in: "path"
-        description: "ID of pet to return"
+        description: "start period"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
+      - name: "dateTo"
+        in: "path"
+        description: "end period"
+        required: true
+        type: "string"
+      - name: "type"
+        in: "path"
+        description: "type"
+        required: true
+        type: "string"
+        enum:
+          - FREE
+          - BOOKED
+          - CHECKED_IN
       responses:
         200:
           description: "successful operation"
           schema:
-            $ref: "#/definitions/Pet"
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Pet not found"
-      security:
-      - api_key: []
-
-securityDefinitions:
-  petstore_auth:
-    type: "oauth2"
-    authorizationUrl: "http://petstore.swagger.io/oauth/dialog"
-    flow: "implicit"
-    scopes:
-      write:pets: "modify pets in your account"
-      read:pets: "read your pets"
-  api_key:
-    type: "apiKey"
-    name: "api_key"
-    in: "header"
+            $ref: '#/definitions/Reception'
 definitions:
+  Reception:
+    properties:
+      id:
+        type: "integer"
+      to:
+        type: "string"
+      from:
+        type: "string"
+      guest:
+        properties:
+          id:
+            type: "integer"
+          address:
+            type: "string"
+          country:
+            properties:
+              id:
+                type: "integer"
+              name:
+                type: "string"
+          firstName:
+            type: "string"
+          middleName:
+            type: "string"
+          secondName:
+            type: "string"
+          phone:
+            type: "string"
+      room:
+        properties:
+          id:
+            type: "integer"
+          price_per_night:
+            type: "number"
+          floor:
+            type: "integer"
+          room_type_id:
+            properties:
+              id:
+                type: "integer"
+              name:
+                type: "string"
+      roomStatus:
+        properties:
+          id:
+            type: "integer"
+          name:
+            type: "string"
+
   Booking:
-    type: "Booking"
     properties:
       from:
         type: "string"
@@ -299,17 +238,9 @@ definitions:
         type: "integer"
       room:
        type: "integer"
-    xml:
-      name: "Booking"
   CheckOut:
-    type: "CheckOut"
     properties:
       id:
         type: "integer"
       to:
         type: "string"
-    xml:
-      name: "CheckOut"
-externalDocs:
-  description: "Find out more about Swagger"
-  url: "http://swagger.io"
